--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/zakandrewking/tinier-todo/issues"
   },
   "scripts": {
-      "bundle": "./node_modules/webpack/bin/webpack.js",
+    "bundle": "./node_modules/webpack/bin/webpack.js",
     "dev-server": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "lodash.get": "^4.0.0",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.2",
+    "tinier": "^0.1.3",
     "webpack": "^1.12.10",
     "webpack-dev-server": "^1.14.0"
   }
