--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
-  presets: ["es2015"],
-  plugins: ["transform-object-rest-spread"]
+  presets: ["es2015", "react"],
+  "plugins": [
+    ["transform-react-jsx", { "pragma": "h" }]
+  ]
 }
-
