--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tinier-todo",
   "version": "0.1.0",
+  "private": true,
   "description": "Todo MVC with tinier",
   "repository": {
     "type": "git",
@@ -12,20 +13,26 @@
     "url": "https://github.com/zakandrewking/tinier-todo/issues"
   },
   "scripts": {
-    "bundle": "./node_modules/webpack/bin/webpack.js",
-    "dev-server": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline"
+    "compile": "./node_modules/.bin/babel -d lib/ --ignore tests/* -s true js/",
+    "bundle": "./node_modules/.bin/webpack",
+    "dev-server": "./node_modules/.bin/webpack-dev-server --hot --inline"
   },
   "dependencies": {
-    "babel-core": "^6.4.0",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.2",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "d3": "^3.5.12",
-    "lodash.get": "^4.0.0",
+    "d3-dom": "^0.1.0",
+    "lodash": "^4.3.0",
     "redux": "^3.0.5",
-    "redux-logger": "^2.3.2",
+    "redux-logger": "^2.5.2",
     "tinier": "^0.1.3",
-    "webpack": "^1.12.10",
-    "webpack-dev-server": "^1.14.0"
+    "todomvc-app-css": "^2.0.0",
+    "todomvc-common": "^1.0.0",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
