--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "d3": "^3.5.12",
-    "d3-dom": "^0.1.0",
+    "tinier-dom": "^0.2.0",
     "lodash": "^4.3.0",
     "redux": "^3.0.5",
     "redux-logger": "^2.5.2",
-    "tinier": "^0.1.3",
+    "source-map-loader": "^0.1.5",
+    "tinier": "^0.3.0",
     "todomvc-app-css": "^2.0.0",
     "todomvc-common": "^1.0.0",
     "webpack": "^1.12.13",
