--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "todomvc-app-css": "^2.0.0",
     "todomvc-common": "^1.0.0",
     "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0"
   }
 }
